Sema: 'Never'-returning functions can be represented in Objective-C

Fixes <https://bugs.swift.org/browse/SR-3203>.