lib/Sema/TypeCheckType.cpp
@@ -3272,6 +3272,7 @@ bool TypeChecker::isRepresentableInObjC(
     Type ResultType = FD->mapTypeIntoContext(FD->getResultInterfaceType());
     if (!ResultType->hasError() &&
         !ResultType->isVoid() &&
+        !ResultType->isUninhabited() &&
         !ResultType->isRepresentableIn(ForeignLanguage::ObjectiveC,
                                        const_cast<FuncDecl *>(FD))) {
       if (Diagnose) {
