test/attr/attr_objc.swift
@@ -2200,3 +2200,7 @@ extension SubclassInfersFromProtocol2 {
   // CHECK: {{^}} @objc dynamic func method1(value: Int)
   func method1(value: Int) { }
 }
+
+@objc class NeverReturningMethod {
+  @objc func doesNotReturn() -> Never {}
+}
